--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.renyuansurvival</groupId>
     <artifactId>BetterMelon</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.0-legacy</version>
     <packaging>jar</packaging>
 
     <name>BetterMelon</name>
